Added colors definition

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,9 @@
 $background: hsl(204, 43%, 93%);
 
 $cyan-box: hsl(179, 62%, 43%);
-$grayish-blue-box: hsl(218, 22%, 67%);
+$light-cyan-box: hsla(179, 62%, 43%, 0.7);
+$grayish-blue-font: hsl(218, 22%, 67%);
 
 $yellow-font: hsl(71, 73%, 54%);
 $yellow-button: hsl(71, 73%, 54%);
+$cyan-font: hsl(179, 62%, 43%);
