--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -39,3 +39,29 @@
     font-size: 14px;
   }
 }
+
+.second-box {
+  background: $cyan-box;
+
+  &__header {
+    margin: 0;
+    color: #fff;
+    font-family: "second-font", Arial, Helvetica, sans-serif;
+    font-size: 19px;
+    letter-spacing: 0.5px;
+  }
+
+  &__paragraph {
+    color: #fff;
+
+    &--bold {
+      font-size: 28px;
+      font-family: "main-font", Arial, Helvetica, sans-serif;
+    }
+
+    &__gray {
+      text-align: center;
+    }
+  }
+
+}
