--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,3 +7,4 @@ $grayish-blue-font: hsl(218, 22%, 67%);
 $yellow-font: hsl(71, 73%, 54%);
 $yellow-button: hsl(71, 73%, 54%);
 $cyan-font: hsl(179, 62%, 43%);
+$light-gray-font: hsl(204, 43%, 93%);
