--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -69,9 +69,15 @@
     color: #fff;
     background: $yellow-button;
     text-align: center;
-    width: 270px;
+    width: 100%;
     height: 45px;
     border: none;
+    font-size: 16px;
+    font-family: "second-font", Arial, Helvetica, sans-serif;
+    border-radius: 5px;
+  }
+}
+
 .third-box {
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
