--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -45,22 +45,23 @@
 
   &__header {
     margin: 0;
-    color: #fff;
+    color: $light-gray-font;
     font-family: "second-font", Arial, Helvetica, sans-serif;
     font-size: 19px;
     letter-spacing: 0.5px;
   }
 
   &__paragraph {
-    color: #fff;
+    color: $light-gray-font;
+    font-family: "second-font", Arial, Helvetica, sans-serif;
 
     &--bold {
+      color: #fff;
       font-size: 28px;
       font-family: "main-font", Arial, Helvetica, sans-serif;
     }
 
-    &__gray {
-      text-align: center;
+      color: $light-gray-font;
     }
   }
 
