--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -5,10 +5,13 @@
 
 .grid {
   width: 325px;
-  margin: 10% auto;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(0, 325px);
   grid-template-rows: 270px 235px 250px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .box {
